--- a/py_course/functional_pro/dir_list.ipynb
+++ b/py_course/functional_pro/dir_list.ipynb
@@ -460,6 +460,255 @@
     "u_reverse(x)\n",
     "print(id(x),x)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20, 30, 'abc', [10, 20, 30]]\n",
+      "[10, 20, 30, 'abc', [10, 20, 30]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#copy()\n",
+    "l=[10,20,30,'abc',[10,20,30]]\n",
+    "x=l.copy()\n",
+    "print(l)\n",
+    "print(x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2675295926336 [10, 20, 30, 'abc', [10, 20, 30]]\n",
+      "2675295925888 [10, 20, 30, 'abc', [10, 20, 30]]\n",
+      "[10, 20, 30, 'abc', [10, 20, 30], 150, 160]\n",
+      "[10, 20, 30, 'abc', [10, 20, 30]]\n",
+      "[10, 20, 30, 'abc', [10, 20, 30, 'a', 'b', 'c'], 150, 160]\n",
+      "[10, 20, 30, 'abc', [10, 20, 30, 'a', 'b', 'c']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[10,20,30,'abc',[10,20,30]]\n",
+    "print(id(l),l)\n",
+    "def u_copy(coll):\n",
+    "    if type(coll)!=list:\n",
+    "        return -1\n",
+    "    res=[]\n",
+    "    for i in coll:\n",
+    "        res+=[i]\n",
+    "    return res\n",
+    "temp=u_copy(l)\n",
+    "print(id(temp),temp)\n",
+    "l+=[150,160]\n",
+    "print(l)\n",
+    "print(temp)\n",
+    "temp[-1]+=['a','b','c']\n",
+    "print(l)\n",
+    "print(temp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20, 30, 'abc', [10, 20, 30, 'a', 'b', 'c'], 'rani']\n",
+      "[20, 30, 'abc', [10, 20, 30, 'a', 'b', 'c'], 'rani']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#pop()\n",
+    "d=[10,20,30,'abc',[10,20,30,'a','b','c'],'rani']\n",
+    "print(d)\n",
+    "d.pop(-6)\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2675295747968 [10, 20, 30, 'abc', [10, 20, 30, 'a', 'b', 'c'], 'rani']\n",
+      "2675295747968 [10, 30, 'abc', [10, 20, 30, 'a', 'b', 'c'], 'rani']\n"
+     ]
+    }
+   ],
+   "source": [
+    "d=[10,20,30,'abc',[10,20,30,'a','b','c'],'rani']\n",
+    "print(id(d),d)\n",
+    "def u_pop(coll,index):\n",
+    "    if type(coll)!=list:\n",
+    "        return -1\n",
+    "    del coll[index]\n",
+    "u_pop(d,-5)\n",
+    "print(id(d),d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2675296017472 [10, 10, 20, 30, 'abc', [10, 20, 30, 'a', 'b', 'c'], 'rani']\n",
+      "2675296017472 [10, 20, 30, 'abc', [10, 20, 30, 'a', 'b', 'c'], 'rani']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#remove()\n",
+    "d=[10,10,20,30,'abc',[10,20,30,'a','b','c'],'rani']\n",
+    "print(id(d),d)\n",
+    "d.remove(10)\n",
+    "print(id(d),d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2675289900928 [10, 20, 30, 'abc', [10, 20, 30, 'a', 'b', 'c'], 'rani']\n",
+      "2675289900928 [10, 30, 'abc', [10, 20, 30, 'a', 'b', 'c'], 'rani']\n"
+     ]
+    }
+   ],
+   "source": [
+    "d=[10,20,30,'abc',[10,20,30,'a','b','c'],'rani']\n",
+    "print(id(d),d)\n",
+    "def u_remove(coll,ele):\n",
+    "    if type(coll)!=list or ele not in coll:\n",
+    "        return -1\n",
+    "    for i in range(0,len(coll)):\n",
+    "        if ele==coll[i]:\n",
+    "            del coll[i]\n",
+    "            break\n",
+    "u_remove(d,20)\n",
+    "# print(u_remove(d,100))\n",
+    "print(id(d),d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2675289910144 [10, 20, 30, 'abc', [10, 20, 30, 'a', 'b', 'c'], 'rani']\n",
+      "2675289910144 []\n"
+     ]
+    }
+   ],
+   "source": [
+    "d=[10,20,30,'abc',[10,20,30,'a','b','c'],'rani']\n",
+    "print(id(d),d)\n",
+    "# d.clear()\n",
+    "# print(id(d),d)\n",
+    "def u_clear(coll):\n",
+    "    if type(coll)!=list:\n",
+    "        return -1\n",
+    "    coll[::]=[]\n",
+    "u_clear(d)\n",
+    "print(id(d),d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2675317371776 [10, 20, 30, 'abc', [10, 20, 30, 'a', 'b', 'c'], 'rani']\n",
+      "2675317371776 []\n"
+     ]
+    }
+   ],
+   "source": [
+    "d=[10,20,30,'abc',[10,20,30,'a','b','c'],'rani']\n",
+    "print(id(d),d)\n",
+    "# d.clear()\n",
+    "# print(id(d),d)\n",
+    "def u_clear(coll):\n",
+    "    if type(coll)!=list:\n",
+    "        return -1\n",
+    "    for i in range(len(coll)):\n",
+    "        del coll[0]\n",
+    "        # del coll[-1]\n",
+    "u_clear(d)\n",
+    "print(id(d),d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 10, 30, 40, 43, 50, 89]\n",
+      "[10, 10, 30, 40, 43, 50, 89]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#sort()            #buble sort\n",
+    "a=[10,30,40,50,10,89,43]\n",
+    "b=sorted(a)\n",
+    "print(b)\n",
+    "def u_sort(coll):\n",
+    "    for i in range(len(coll)):\n",
+    "        for j in range(len(coll)-1):\n",
+    "            if coll[j]>coll[j+1]:\n",
+    "                coll[j],coll[j+1]=coll[j+1],coll[j]\n",
+    "u_sort(a)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
