--- a/py_course/functional_pro/dir_str.ipynb
+++ b/py_course/functional_pro/dir_str.ipynb
@@ -1258,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1287,8 +1287,8 @@
     "        res+=st[i]\n",
     "        i+=1\n",
     "    return (res==sub)\n",
-    "print(st.endswith('love'))\n",
-    "print(u_endswith(st,'love'))\n"
+    "print(st.endswith('like love'))\n",
+    "print(u_endswith(st,'love',0))\n"
    ]
   },
   {
@@ -1640,16 +1640,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello \t \n",
+      "haii\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'\\n     hello \\t \\n \\rhaii'"
+       "'     hello \\t \\n \\rhaii'"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1658,7 +1666,9 @@
     "#lstrip()\n",
     "# st='      hello  haii    '\n",
     "st='\\t\\n     hello \\t \\n \\rhaii'\n",
-    "st.lstrip()\n",
+    "# st='\\n     hello \\t \\n \\rhaii'\n",
+    "\n",
+    "# print(st.lstrip())\n",
     "def u_lstrip(coll,ele=[' ','\\n','\\t','\\r','\\f']):\n",
     "    res=''\n",
     "    for i in range(0,len(coll)):\n",
@@ -1668,7 +1678,8 @@
     "            res+=coll[i:]\n",
     "            break\n",
     "    return res\n",
-    "u_lstrip(st,'\\t')"
+    "u_lstrip(st,'\\n')\n",
+    "# print(a)"
    ]
   },
   {
@@ -1702,7 +1713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1711,7 +1722,7 @@
        "'\\t\\n     hello \\t \\n \\rhaii'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1730,7 +1741,34 @@
     "            res+=coll[:i+1]\n",
     "            break\n",
     "    return res\n",
-    "u_rstrip(st,'\\t')"
+    "u_rstrip(st,'\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range (10-1,-1,-1):\n",
+    "    print(i)"
    ]
   },
   {
