--- a/py_course/new.ipynb
+++ b/py_course/new.ipynb
@@ -24,6 +24,36 @@
     "else:\n",
     "    print('ODD')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to print nth prime number\n",
+    "a=6\n",
+    "def prime_num(num):\n",
+    "    nprime=0\n",
+    "    b=True\n",
+    "    i=0\n",
+    "    while b:\n",
+    "        if i%2==0:\n",
+    "            if num==nprime:\n",
+    "                print(i)\n",
+    "                break\n",
+    "            nprime+=1\n",
+    "        i+=1\n",
+    "prime_num(a)"
+   ]
   }
  ],
  "metadata": {
