--- a/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
@@ -1118,6 +1118,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#wap to print nth prime number\n",
+    "a=4\n",
+    "def prim(num):\n",
+    "    b=1\n",
+    "    equ=0\n",
+    "    while b:\n",
+    "        # print(b)\n",
+    "        n=b\n",
+    "        m=1\n",
+    "        count=0\n",
+    "        while m<=n:\n",
+    "            if n%m==0:\n",
+    "                count+=1\n",
+    "            m+=1\n",
+    "        if count==2:\n",
+    "            equ+=1\n",
+    "        if equ==num:\n",
+    "            break\n",
+    "        b+=1\n",
+    "    return b\n",
+    "\n",
+    "prim(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [
