--- a/py_course/functional_pro/dir_set.ipynb
+++ b/py_course/functional_pro/dir_set.ipynb
@@ -235,7 +235,7 @@
     }
    ],
    "source": [
-    "#discord()\n",
+    "#discard()\n",
     "s={'a','b','c'}\n",
     "print(id(s),s)\n",
     "s.discard('r')\n",
@@ -260,12 +260,12 @@
    "source": [
     "s={'a','b','c'}\n",
     "print(id(s),s)\n",
-    "def u_discord(coll,ele):\n",
+    "def u_discard(coll,ele):\n",
     "    if type(s)!=set:\n",
     "        raise TypeError('collection should be set')\n",
     "    coll-={ele}\n",
-    "u_discord(s,'c')\n",
-    "# u_discord(s,'r')\n",
+    "u_discard(s,'c')\n",
+    "# u_discard(s,'r')\n",
     "print(id(s),s)"
    ]
   },
