--- a/py_course/functional_pro/functions.ipynb
+++ b/py_course/functional_pro/functions.ipynb
@@ -1363,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1378,25 +1378,26 @@
     "            if func(i)==d[i]:\n",
     "                res=f'Testcase{count} ==> input is {i} output is passed'\n",
     "                print(res)\n",
+    "                count+=1\n",
     "                rating+=1\n",
     "            else:\n",
     "                res=f'Testcase{count} ==> input is {i} output is failed'\n",
     "                print(res)\n",
-    "            count+=1\n",
+    "                count+=1\n",
     "        return rating\n",
     "    return inner"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Testcase1 ==> input is 2 output is failed\n",
+      "Testcase1 ==> input is 2 output is passed\n",
       "Testcase2 ==> input is 3 output is passed\n",
       "Testcase3 ==> input is 11 output is passed\n",
       "Testcase4 ==> input is 17 output is passed\n",
@@ -1404,16 +1405,16 @@
       "Testcase6 ==> input is 6 output is passed\n",
       "Testcase7 ==> input is 8 output is passed\n",
       "Testcase8 ==> input is 10 output is passed\n",
-      "Testcase9 ==> input is 123 output is failed\n"
+      "Testcase9 ==> input is 123 output is passed\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "7"
+       "9"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1421,25 +1422,25 @@
    "source": [
     "@check_prime\n",
     "def prime(n):\n",
-    "    for i in range(2,n+1):\n",
+    "    for i in range(2,n):\n",
     "        # print(i)\n",
     "        if n%i==0:\n",
     "            # print('if')\n",
     "            return False\n",
-    "        return True\n",
+    "    return True\n",
     "prime(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Testcase1 ==> input is 2 output is failed\n",
+      "Testcase1 ==> input is 2 output is passed\n",
       "Testcase2 ==> input is 3 output is passed\n",
       "Testcase3 ==> input is 11 output is passed\n",
       "Testcase4 ==> input is 17 output is passed\n",
@@ -1447,17 +1448,17 @@
       "Testcase6 ==> input is 6 output is passed\n",
       "Testcase7 ==> input is 8 output is passed\n",
       "Testcase8 ==> input is 10 output is passed\n",
-      "Testcase9 ==> input is 123 output is failed\n",
-      "time 0.0\n"
+      "Testcase9 ==> input is 123 output is passed\n",
+      "time 0.0010170936584472656\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "7"
+       "9"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1500,7 +1501,7 @@
     "        if n%i==0:\n",
     "            # print('if')\n",
     "            return False\n",
-    "        return True\n",
+    "    return True\n",
     "prime()"
    ]
   },
@@ -1520,16 +1521,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "<generator object sample at 0x0000015BDFC86730>"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1539,12 +1540,188 @@
     "    l=[]\n",
     "    for i in range(0,a):\n",
     "        l+=[i]\n",
-    "    return l            #check ur doubt\n",
+    "    print(l)\n",
+    "    return l         #check ur doubt\n",
     "    for i in range(0,a):\n",
     "        yield i\n",
     "    print('dfjdlj')\n",
-    "sample(0)\n",
-    "# print(res)"
+    "sample(5)\n",
+    "# print(res)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "copied....18/10/23"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<generator object sample at 0x000001A664A58BA0>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def sample():\n",
+    "    a=10\n",
+    "    print('a:',a)\n",
+    "    yield a\n",
+    "    b=20\n",
+    "    print('b:',b)\n",
+    "    yield b\n",
+    "    c=30\n",
+    "    print('c:',c)\n",
+    "    yield c\n",
+    "sample()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a: 10\n",
+      "b: 20\n",
+      "c: 30\n",
+      "(10, 20, 30)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sample():\n",
+    "    a=10\n",
+    "    print('a:',a)\n",
+    "    yield a\n",
+    "    b=20\n",
+    "    print('b:',b)\n",
+    "    yield b\n",
+    "    c=30\n",
+    "    print('c:',c)\n",
+    "    yield c\n",
+    "temp=sample()\n",
+    "# print(temp)\n",
+    "# print(list[temp])    \n",
+    "print(tuple(temp))\n",
+    "\n",
+    "#by using typecasting."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a: 10\n",
+      "10\n",
+      "b: 20\n",
+      "20\n",
+      "c: 30\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "#by using dyamic .\n",
+    "\n",
+    "def sample():\n",
+    "    a=10\n",
+    "    print('a:',a)\n",
+    "    yield a\n",
+    "    b=20\n",
+    "    print('b:',b)\n",
+    "    yield b\n",
+    "    c=30\n",
+    "    print('c:',c)\n",
+    "    yield c\n",
+    "temp=sample()\n",
+    "for i in temp:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20, 30, 50, 60, 40, 50, 16, 16, 14, 2, 10, 10, 10, 16, 14]\n",
+      "res [10, 20, 30, 50, 60, 40, 50, 16, 16, 14, 2, 10, 10, 10, 16, 14]\n",
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=[10,20,30,50,60,40,50]\n",
+    "b=[15,3,16,19,1,21,16,14,17,2]\n",
+    "c=[10,10,10,15,16,14,17,13]\n",
+    "def  fun(*args):\n",
+    "    l=[]\n",
+    "    for j in args:\n",
+    "        for i in j:\n",
+    "            if type(i)in [int,float]and i%2==0:\n",
+    "                l+=[i]\n",
+    "    print(l)\n",
+    "    return l   \n",
+    "res=fun(a,b,c)\n",
+    "print(\"res\",res)\n",
+    "res.clear()\n",
+    "print(res)        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Shaik Imran\\Documents\\GitHub\\BASIC_PYTHON\\py_course\\functional_pro\\functions.ipynb Cell 69\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/Documents/GitHub/BASIC_PYTHON/py_course/functional_pro/functions.ipynb#Y125sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m         time\u001b[39m.\u001b[39msleep(\u001b[39m10\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/Documents/GitHub/BASIC_PYTHON/py_course/functional_pro/functions.ipynb#Y125sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m r\u001b[39m=\u001b[39mdemo(a,b,c)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/Documents/GitHub/BASIC_PYTHON/py_course/functional_pro/functions.ipynb#Y125sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mlist\u001b[39;49m(r))        \n",
+      "\u001b[1;32mc:\\Users\\Shaik Imran\\Documents\\GitHub\\BASIC_PYTHON\\py_course\\functional_pro\\functions.ipynb Cell 69\u001b[0m line \u001b[0;36m1\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/Documents/GitHub/BASIC_PYTHON/py_course/functional_pro/functions.ipynb#Y125sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mtype\u001b[39m(j)\u001b[39m==\u001b[39m \u001b[39mint\u001b[39m \u001b[39mand\u001b[39;00m j\u001b[39m%\u001b[39m\u001b[39m2\u001b[39m\u001b[39m==\u001b[39m\u001b[39m0\u001b[39m:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/Documents/GitHub/BASIC_PYTHON/py_course/functional_pro/functions.ipynb#Y125sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m         \u001b[39myield\u001b[39;00m j\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/Documents/GitHub/BASIC_PYTHON/py_course/functional_pro/functions.ipynb#Y125sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m time\u001b[39m.\u001b[39;49msleep(\u001b[39m10\u001b[39;49m)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "a=[10,20,30,50,60,40,50]\n",
+    "b=[15,3,16,19,1,21,16,14,17,2]\n",
+    "c=[10,10,10,15,16,14,17,13]\n",
+    "import time\n",
+    "def  demo(*args):\n",
+    "    \n",
+    "    for i in args:\n",
+    "        for j in i:\n",
+    "            if type(j)== int and j%2==0:\n",
+    "                yield j\n",
+    "        time.sleep(10)\n",
+    "r=demo(a,b,c)\n",
+    "print(list(r))        \n"
    ]
   }
  ],
