--- a/py_course/new.ipynb
+++ b/py_course/new.ipynb
@@ -27,32 +27,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#wap to print nth prime number\n",
+    "a=1\n",
+    "def prim(num):\n",
+    "    b=1\n",
+    "    equ=0\n",
+    "    while b:\n",
+    "        # print(b)\n",
+    "        n=b\n",
+    "        m=1\n",
+    "        count=0\n",
+    "        while m<=n:\n",
+    "            if n%m==0:\n",
+    "                count+=1\n",
+    "            m+=1\n",
+    "        if count==2:\n",
+    "            equ+=1\n",
+    "        if equ==num:\n",
+    "            break\n",
+    "        b+=1\n",
+    "    return b\n",
+    "\n",
+    "prim(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12\n"
+      "The 1th prime number is: 2\n"
      ]
     }
    ],
    "source": [
-    "#wap to print nth prime number\n",
-    "a=6\n",
-    "def prime_num(num):\n",
-    "    nprime=0\n",
-    "    b=True\n",
-    "    i=0\n",
-    "    while b:\n",
-    "        if i%2==0:\n",
-    "            if num==nprime:\n",
-    "                print(i)\n",
-    "                break\n",
-    "            nprime+=1\n",
-    "        i+=1\n",
-    "prime_num(a)"
+    "def is_prime(num): #chat GPT\n",
+    "    if num < 2:\n",
+    "        return False\n",
+    "    for i in range(2, int(num**0.5) + 1):\n",
+    "        if num % i == 0:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "def nth_prime(n):\n",
+    "    count = 0\n",
+    "    num = 2\n",
+    "    while count < n:\n",
+    "        if is_prime(num):\n",
+    "            count += 1\n",
+    "            if count == n:\n",
+    "                return num\n",
+    "        num += 1\n",
+    "\n",
+    "n = int(input(\"Enter the value of n: \"))\n",
+    "print(f\"The {n}th prime number is: {nth_prime(n)}\")"
    ]
   }
  ],
