--- a/py_course/functional_pro/dir_list.ipynb
+++ b/py_course/functional_pro/dir_list.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -15,7 +15,7 @@
    ],
    "source": [
     "['append', 'clear', 'copy', 'count', 'extend', 'index', 'insert', 'pop', 'remove', 'reverse', 'sort']\n",
-    "print(dir(list))"
+    "print(dir(list))\n"
    ]
   },
   {
