--- a/py_course/functional_pro/functions.ipynb
+++ b/py_course/functional_pro/functions.ipynb
@@ -1723,6 +1723,491 @@
     "r=demo(a,b,c)\n",
     "print(list(r))        \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<function <lambda> at 0x0000019DB4AE75B0>\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lambda:10)\n",
+    "res=lambda:10\n",
+    "# print(res)\n",
+    "print(res())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "res=lambda a:10\n",
+    "# print(res)\n",
+    "print(res(20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<function <lambda> at 0x0000019DB4AE7640>\n",
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "res=lambda a:30+a\n",
+    "print(res)\n",
+    "print(res(20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<function <lambda> at 0x0000019DB4C9B370>\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "res=lambda a,b:a+b\n",
+    "print(res)\n",
+    "print(res(10,20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<function <lambda> at 0x0000019DB4C9BE20>\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "res=lambda a:None\n",
+    "print(res)\n",
+    "print(res(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#wap to check the given chr is uppercase or not. if it uppercase\n",
+    "#convert to lowercase. if lowercase return ascii value of given chr using functions\n",
+    "ch='A'\n",
+    "def sample(ch):\n",
+    "    if len(ch)==1 and 'A'<=ch<='Z':\n",
+    "        return chr(ord(ch)+32)\n",
+    "    else:\n",
+    "        return ord(ch)\n",
+    "sample(ch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ch='A'\n",
+    "def isupper(ch):\n",
+    "    return chr(ord(ch)+32) if len(ch)==1 and 'A'<=ch<='Z' else ord(ch)\n",
+    "isupper(ch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ch='A'\n",
+    "def isupper(ch): return[ord(ch),chr(ord(ch)+32)][len(ch)==1 and 'A'<=ch<='Z']\n",
+    "isupper(ch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "106\n"
+     ]
+    }
+   ],
+   "source": [
+    "print((lambda ch:[ord(ch),chr(ord(ch)+32)][len(ch)==1 and 'A'<=ch<='Z'])(input(\"enter the value\")))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "97\n"
+     ]
+    }
+   ],
+   "source": [
+    "print((lambda ch:[ord(ch),chr(ord(ch)+32)][len(ch)==1 and 'A'<=ch<='Z'])(input('enter value')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "343000\n",
+      "38\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to check the given num is div by 5 and 7.\n",
+    "#if it is div return cube of the given value\n",
+    "#else to return half of the given value by using functions\n",
+    "\n",
+    "def check_number(num):\n",
+    "    if num%5==0 and num%7==0:\n",
+    "        return num**3\n",
+    "    else:\n",
+    "        return num//2\n",
+    "print(check_number(16))\n",
+    "print(check_number(70))\n",
+    "print(check_number(77))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res=lambda num:num**3 if num%5==0 and num%7==0 else num//2\n",
+    "res(36)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to store sequence of values from 1 to nth.\n",
+    "start=1\n",
+    "end=eval(input('enter the value:'))\n",
+    "l=[]\n",
+    "while start<=end:\n",
+    "    l+=[start]\n",
+    "    start+=1\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def seq(end=10):\n",
+    "    l=[]\n",
+    "    start=1\n",
+    "    while start<=end:\n",
+    "        l+=[start]\n",
+    "        start+=1\n",
+    "    return l\n",
+    "seq(15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def seq1(end=10):\n",
+    "    l=[]\n",
+    "    for i in range(1,end+1):\n",
+    "        l+=[i]\n",
+    "    return l\n",
+    "seq1(14)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "var=[i for i in range(1,eval(input('enter value:'))+1)]\n",
+    "print(var)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def sample(end=10):\n",
+    "    return [i for i in range(1,end+1)]\n",
+    "sample(eval(input('enter integer value')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "var=lambda:[i for i in range(1,eval(input('enter number'))+1)]\n",
+    "var()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12, 13, 14, 15, 16, 17]\n",
+      "[12, 13, 14, 15, 16, 17]\n"
+     ]
+    }
+   ],
+   "source": [
+    "st='12 13 14 15 16 17'\n",
+    "l=[]\n",
+    "for i in st.split():\n",
+    "    l+=[int(i)]\n",
+    "print(l)\n",
+    "\n",
+    "st='12 13 14 15 16 17'\n",
+    "var=lambda:[int(i) for i in st.split()]\n",
+    "print(var())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "6\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to count the num of vowels in given string.\n",
+    "#wap to count the num of vowels in given string.without count.\n",
+    "\n",
+    "st='aizensosuke'\n",
+    "def count1(coll):\n",
+    "    c=0\n",
+    "    for i in coll:\n",
+    "        if i in 'AEIOUaeiou':\n",
+    "            c+=1\n",
+    "    return c\n",
+    "print(count1(st))\n",
+    "#---------\n",
+    "st='aizensosuke'\n",
+    "\n",
+    "def count1(coll):\n",
+    "    c=[]\n",
+    "    for i in coll:\n",
+    "        if i in 'aeiouAEIOU':\n",
+    "            c+=[i]\n",
+    "    return len(c)\n",
+    "print(count1(st))\n",
+    "\n",
+    "#----------------\n",
+    "var=lambda:len([i for i in st if i in 'AEIOUaeiou'])\n",
+    "print(var())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12, 14, 16, 18]\n"
+     ]
+    }
+   ],
+   "source": [
+    "st='12 13 14 15 16 17 18 19'\n",
+    "# l=[12,5,16,18]\n",
+    "\n",
+    "var=lambda:[int(i) for i in st.split() if int(i)%2==0]\n",
+    "print(var())"
+   ]
   }
  ],
  "metadata": {
