--- a/py_course/functional_pro/functions.ipynb
+++ b/py_course/functional_pro/functions.ipynb
@@ -2208,6 +2208,92 @@
     "var=lambda:[int(i) for i in st.split() if int(i)%2==0]\n",
     "print(var())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "live----"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#recurtion\n",
+    "#a function with calls by itself"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#wap to print sum of digits using functions\n",
+    "def sum1(num,sum=0):\n",
+    "    if num==0:\n",
+    "        return sum\n",
+    "    sum+=num\n",
+    "    return sum1(num-1,sum)\n",
+    "sum1(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'prime'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#wap to check the given number is prime number or not\n",
+    "# def prime(num,i=1,count=0):\n",
+    "#     while i<=num:\n",
+    "#         if num%i==0:\n",
+    "#             count+=1 \n",
+    "#         i+=1\n",
+    "#     return ['not prime','prime'][count==2]  \n",
+    "# prime(6)      \n",
+    "#---\n",
+    "def prime1(num,i=1,count=0):\n",
+    "    if num==i:\n",
+    "        return ['not prime','prime'][count==1]\n",
+    "    if num%i==0:\n",
+    "        count+=1\n",
+    "    return prime1(num,i+1,count)\n",
+    "prime1(2)\n",
+    "#---\n",
+    "def prime1(num,i=2,count=0):\n",
+    "    if num==i:\n",
+    "        return ['not prime','prime'][count==0]\n",
+    "    if num%i==0:\n",
+    "        count+=1\n",
+    "    return prime1(num,i+1,count)\n",
+    "prime1(2)"
+   ]
   }
  ],
  "metadata": {
