--- a/py_course/functional_pro/functions.ipynb
+++ b/py_course/functional_pro/functions.ipynb
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
     "        fact*=a\n",
     "        a-=1   \n",
     "    print(j,fact) \n",
-    "    fact=1    "
+    "    # fact=1    "
    ]
   },
   {
@@ -1588,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1598,7 +1598,8 @@
       "a: 10\n",
       "b: 20\n",
       "c: 30\n",
-      "(10, 20, 30)\n"
+      "(10, 20, 30)\n",
+      "set()\n"
      ]
     }
    ],
@@ -1617,13 +1618,14 @@
     "# print(temp)\n",
     "# print(list[temp])    \n",
     "print(tuple(temp))\n",
+    "# print(set(temp)) #only 1 time we can use the Generator object\n",
     "\n",
     "#by using typecasting."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2293,6 +2295,44 @@
     "        count+=1\n",
     "    return prime1(num,i+1,count)\n",
     "prime1(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "GLOBAL VARIABLE     GLOBAL SPACE    LOCAL SPACE                       NON LOCAL SPACE\n",
+    "\n",
+    "Initialization      possible        possible(Global keyword)          possible(Global keyword)   \n",
+    "Fetch               possible        possible                          possible\n",
+    "Reinitialization    possible        possible(Global keyword)          possible(Global keyword)\n",
+    "Delete              possible        possible(Global keyword)          possible(Global keyword)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def fact(n,factt=1):\n",
+    "    if n==0:\n",
+    "        return factt\n",
+    "    factt*=n\n",
+    "    # print(factt)\n",
+    "    return fact(n-1,factt)\n",
+    "fact(5)"
    ]
   }
  ],
